--- a/ReportGenerator/ReportGenerator.csproj
+++ b/ReportGenerator/ReportGenerator.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyOfficeLibrary\MyOfficeLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
